# ascii-capsule

./: .gitignore  PLAN.md  README.md  asciify.py  main.py  pixi.toml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: pytest.yml  test.yml
dsi/: Makefile  asciicapsule.elf  asciicapsule.nds
dsi/nitrofiles/: instructions.txt  manifest.txt  welcome_art.txt  welcome_letter.txt
dsi/nitrofiles/art/: 2SHOO.txt  BAYB.txt  BIGJO.txt  C0ZY.txt  CHEFHTN.txt  DMPL93.txt  HMCK25.txt  PCKL57.txt  TNT404.txt
dsi/nitrofiles/letters/: 2SHOO.txt  5SPICE.txt  BAYB.txt  BIGJO.txt  C0ZY.txt  CHEFHTN.txt  DMPL93.txt  GTRHR0.txt  HMCK25.txt  LABORWITHOUTTHEU.txt  PCKL57.txt  THREEFOURTEENTHS.txt  TNT404.txt
dsi/nitrofiles/messages/: .gitignore
dsi/source/: content.c  content.h  keyboard.c  keyboard.h  main.c  viewer.c  viewer.h
dsi/tests/: Makefile  test_content  test_content.c
dsi/tools/: prepare_content.sh
imgs/: hammock.html  hammock.txt
src/: __init__.py  ascii_converter.py  ascii_output.py  asciify.py  preprocess.py  text_concealer.py
tests/: test_ascii_converter.py  test_ascii_output.py  test_asciify.py  test_preprocess.py  test_text_concealer.py
