[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-capsule"
version = "0.1.0"
description = "A package for ASCII art and text concealment."
authors = [
    { name = "Arushi Sinha", email = "arushisinha98+github@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/arushisinha98/ascii-capsule"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
